infra/kubernets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cadastropromocao-deployment
  namespace: cadastropromocao-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cadastropromocao
  template:
    metadata:
      annotations:
        redeploy-at: "2026-04-23T17:17:20Z"
      labels:
        app: cadastropromocao
    spec:
      containers:
      - name: cadastropromocao
        image: eurival/cadastropromocao-frontend:latest  # Alterar conforme a imagem que você está utilizando
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"           # Requisição de memória (mínimo necessário)
            cpu: "100m"              # Requisição de CPU (mínimo necessário)
            ephemeral-storage: "100Mi"  # Requisição de armazenamento efêmero
          limits:
            memory: "512Mi"           # Limite de memória (máximo permitido)
            cpu: "500m"               # Limite de CPU (máximo permitido)
            ephemeral-storage: "500Mi"  # Limite de armazenamento efêmero
